src/Base/main/default/objects/Activity/fields/Dialpad__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>