src/Base/main/default/objects/Activity/fields/Meeting_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Start_Time__c</fullName>
    <description>The Time the Meeting Starts</description>
    <label>Meeting Start Time</label>
    <type>Time</type>
</CustomField>